--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>Schulte Sheet</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <div id="app">
     <h1>Schulte Sheet</h1>
+
+    <label for="gridSize">Grid Size:</label>
+    <select id="gridSize">
+      <option value="3">3×3</option>
+      <option value="4">4×4</option>
+      <option value="5" selected>5×5</option>
+      <option value="6">6×6</option>
+      <option value="7">7×7</option>
+    </select>
+
+    <div id="sound-settings">
+      <button id="toggle-sound">Sound: On</button>
+      <input id="volume" type="range" min="0" max="0.3" step="0.01" value="1" />
+    </div>
+
     <div id="grid"></div>
     <button id="restart">Restart</button>
     <div id="timer">Time: 0.00s</div>
   </div>
   <script type="module" src="../dist/src/app.js"></script>
 </body>
+
 </html>
